versioned_docs/version-8.3.1/sdks/net/ios/id-capture/advanced.md
---
sidebar_position: 4
pagination_next: null
framework: netIos
keywords:
  - netIos
---

# Advanced Configurations

There are several advanced configurations that can be used to customize the behavior of the ID Capture SDK and enable additional features.

## Configure Data Anonymization

By default, data extracted from documents is anonymized according to local regulations. See [Anonymized Documents](/sdks/net/ios/id-capture/supported-documents.md#anonymized-documents) for more information.

That means certain data from certain fields won’t be returned, even if it’s present on a document. You control the anonymization level with the following setting:

```csharp
// Default value:
settings.AnonymizationMode = IdAnonymizationMode.FieldsOnly;

// Sensitive data is additionally covered with black boxes on returned images:
settings.AnonymizationMode = IdAnonymizationMode.FieldsAndImages;

// Only images are anonymized:
settings.AnonymizationMode = IdAnonymizationMode.ImagesOnly;

// No anonymization:
settings.AnonymizationMode = IdAnonymizationMode.None;
```

## Document Capture Zones

By default, a new instance of [IdCaptureSettings](https://docs.scandit.com/data-capture-sdk/dotnet.ios/id-capture/api/id-capture-settings.html#class-scandit.datacapture.id.IdCaptureSettings) creates a single-sided scanner type with no accepted or rejected documents. 

To change this, set the `Scanner` property on `IdCaptureSettings` to an [IdCaptureScanner](https://docs.scandit.com/data-capture-sdk/dotnet.ios/id-capture/api/id-capture-scanner.html) configured with either a [SingleSideScanner](https://docs.scandit.com/data-capture-sdk/dotnet.ios/id-capture/api/id-capture-scanner.html#single-side-scanner) or [FullDocumentScanner](https://docs.scandit.com/data-capture-sdk/dotnet.ios/id-capture/api/id-capture-scanner.html#full-document-scanner).

The `FullDocumentScanner` extracts all document information by default. If using the `SingleSideScanner`, you can specify the document zones to extract via its constructor parameters:

```csharp
// To extract data from barcodes on IDs
settings.Scanner = new IdCaptureScanner(new SingleSideScanner(barcode: true, machineReadableZone: false, visualInspectionZone: false), mobileDocument: null);
// To extract data from the visual inspection zone (VIZ) on IDs
settings.Scanner = new IdCaptureScanner(new SingleSideScanner(barcode: false, machineReadableZone: false, visualInspectionZone: true), mobileDocument: null);
// To extract data from the machine-readable zone (MRZ) on IDs
settings.Scanner = new IdCaptureScanner(new SingleSideScanner(barcode: false, machineReadableZone: true, visualInspectionZone: false), mobileDocument: null);
```

## Configure Accepted and Rejected Documents

To configure the documents that should be accepted and/or rejected, set the `AcceptedDocuments` and `RejectedDocuments` properties in `IdCaptureSettings`.

These properties take a list of [IIdCaptureDocument](https://docs.scandit.com/data-capture-sdk/dotnet.ios/id-capture/api/id-capture-document.html) instances (e.g. `Passport`, `DriverLicense`, `IdCard`) combined with the [IdCaptureRegion](https://docs.scandit.com/data-capture-sdk/dotnet.ios/id-capture/api/id-capture-region.html#enum-scandit.datacapture.id.IdCaptureRegion) enum to enable highly flexible document filtering.

For example, to accept only US Driver Licenses:

```csharp
settings.AcceptedDocuments = new List<IIdCaptureDocument> { new DriverLicense(IdCaptureRegion.Us) };
```

Or to accept all Passports *except* those from the US:

```csharp
settings.AcceptedDocuments = new List<IIdCaptureDocument> { new Passport(IdCaptureRegion.Any) };
settings.RejectedDocuments = new List<IIdCaptureDocument> { new Passport(IdCaptureRegion.Us) };
```

## ID Images

Your use can may require that you capture and extract images of the ID document. Use the [IdImageType](https://docs.scandit.com/data-capture-sdk/dotnet.ios/id-capture/api/id-image-type.html#enum-scandit.datacapture.id.IdImageType) enum to specify the images you want to extract from the `CapturedId` object

For the full frame of the document, you can use [`setShouldPassImageTypeToResult`](https://docs.scandit.com/data-capture-sdk/dotnet.ios/id-capture/api/id-capture-settings.html#method-scandit.datacapture.id.IdCaptureSettings.SetShouldPassImageTypeToResult) when creating the `IdCaptureSettings` object. This will pass the image type to the result, which you can then access in the `CapturedId` object.

## Callbacks and Scanning Workflows

The ID Capture Listener provides two callbacks: `onIdCaptured` and `onIdRejected`. The `onIdCaptured` callback is called when an acceptable document is successfully captured, while the `onIdRejected` callback is called when a document is captured but rejected.

For a successful capture, the `onIdCaptured` callback provides a `CapturedId` object that contains the extracted information from the document. This object is specific to the type of document scanned. For example, a `CapturedId` object for a US Driver License will contain different fields than a `CapturedId` object for a Passport.

For a rejected document, a [RejectionReason](https://docs.scandit.com/data-capture-sdk/dotnet.ios/id-capture/api/rejection-reason.html#enum-scandit.datacapture.id.RejectionReason) is provided in the `onIdRejected` callback to help you understand why the document was rejected and to take appropriate action. These are:

* NOT_ACCEPTED_DOCUMENT_TYPE: The document is not in the list of accepted documents. In this scenario, you could direct the user to scan a different document.
* INVALID_FORMAT: The document is in the list of accepted documents, but the format is invalid. In this scenario, you could direct the user to scan the document again.
* DOCUMENT_VOIDED: The document is in the list of accepted documents, but the document is voided. In this scenario, you could direct the user to scan a different document.
* TIMEOUT: The document was not scanned within the specified time. In this scenario, you could direct the user to scan the document again.

## Detect Fake IDs

*ID Validate* is a fake ID detection software. It currently supports documents that follow the Driver License/Identification Card specification by the American Association of Motor Vehicle Administrators (AAMVA).

Fake ID detection can be performed automatically using the following settings:

* [IdCaptureSettings.rejectForgedAamvaBarcodes](https://docs.scandit.com/data-capture-sdk/dotnet.ios/id-capture/api/id-capture-settings.html#property-scandit.datacapture.id.IdCaptureSettings.RejectForgedAamvaBarcodes): Automatically rejects documents whose AAMVA barcode fails authenticity validation.
* [IdCaptureSettings.rejectInconsistentData](https://docs.scandit.com/data-capture-sdk/dotnet.ios/id-capture/api/id-capture-settings.html#property-scandit.datacapture.id.IdCaptureSettings.RejectInconsistentData): Automatically rejects documents whose human‑readable data does not match the data encoded in the barcode or MRZ.

To enable ID validation for your subscription, please reach out to [Scandit Support](mailto:support@scandit.com).
